src/main/java/com/example/api/security/error/InvalidJwtAuthenticationException.java
package com.example.api.security.error;

public class InvalidJwtAuthenticationException extends RuntimeException {
    public InvalidJwtAuthenticationException(String message) {
        super(message);
    }
}
